--- a/transformers/fine-tune-quickstart.ipynb
+++ b/transformers/fine-tune-quickstart.ipynb
@@ -661,7 +661,7 @@
    "source": [
     "from transformers import TrainingArguments, Trainer\n",
     "\n",
-    "training_args = TrainingArguments(output_dir=model_dir,\n",
+    "training_args = TrainingArguments(output_dir=model_dir_2,\n",
     "                                  evaluation_strategy=\"epoch\", \n",
     "                                  per_device_train_batch_size=16,\n",
     "                                  num_train_epochs=3,\n",
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "accfe921-471d-481a-96da-c491cdebad0c",
    "metadata": {},
    "outputs": [
@@ -751,8 +751,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='121876' max='121875' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [121875/121875 17:09, Epoch 3/3]\n",
+       "      <progress value='121875' max='121875' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [121875/121875 1:07:48, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -760,17 +760,18 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.592800</td>\n",
+       "      <td>0.761321</td>\n",
+       "      <td>0.688900</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
-       "</table><p>\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='2909' max='6250' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2909/6250 23:33 < 27:04, 2.06 it/s]\n",
-       "    </div>\n",
-       "    "
+       "</table><p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -778,6 +779,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=121875, training_loss=0.0017994390321389223, metrics={'train_runtime': 4072.1347, 'train_samples_per_second': 478.864, 'train_steps_per_second': 29.929, 'total_flos': 5.130803778048e+17, 'train_loss': 0.0017994390321389223, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -786,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6d581099-37a4-4470-b051-1ada38554089",
    "metadata": {},
    "outputs": [],
@@ -796,10 +807,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ffb47eab-1370-491e-8a84-6d5347a350b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='13' max='13' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [13/13 00:05]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 0.9361550211906433,\n",
+       " 'eval_accuracy': 0.6,\n",
+       " 'eval_runtime': 6.1449,\n",
+       " 'eval_samples_per_second': 16.274,\n",
+       " 'eval_steps_per_second': 2.116,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer.evaluate(small_test_dataset)"
    ]
@@ -817,50 +862,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ad0cbc14-9ef7-450f-a1a3-4f92b6486f41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir_2 = \"models/bert-base-cased-finetune-yelp-full\"\n",
+    "model_dir_2 = \"models/bert-base-cased-finetune-yelp-full-save_model\"\n",
     "trainer.save_model(model_dir_2)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6e30510-0536-49d4-8e1b-43fc25272bde",
+   "cell_type": "markdown",
+   "id": "c005a634-a711-47b1-9806-de2223c1484d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 替换保持路径\n",
+    "args.output_dir在前面设置过，这里重新换成正确的路径"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "badf5868-2847-439d-a73e-42d1cca67b5e",
+   "execution_count": 38,
+   "id": "f6e30510-0536-49d4-8e1b-43fc25272bde",
    "metadata": {},
    "outputs": [],
    "source": [
+    "trainer.args.output_dir = model_dir_2\n",
     "trainer.save_state()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c9441ad-f65a-42b7-9016-4809c78285e9",
+   "cell_type": "markdown",
+   "id": "3ccdc7c8-eb9f-4a79-9e10-93f6276ca1a6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 使用save_pretrained保存"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd92e35d-fed7-4ff2-aa84-27b5e29b917a",
+   "execution_count": 31,
+   "id": "8c9441ad-f65a-42b7-9016-4809c78285e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trainer.model.save_pretrained(\"./\")"
+    "model_dir_3 = \"models/bert-base-cased-finetune-yelp-full-save_pretrained\"\n",
+    "trainer.model.save_pretrained(model_dir_3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fd92e35d-fed7-4ff2-aa84-27b5e29b917a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -874,6 +930,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ee2580a-7a5a-46ae-a28b-b41e9e838eb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbd87de5-70ca-4314-ae52-1f65fb68c325",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c793631-8603-4846-aba6-b043198e4b42",
    "metadata": {},
    "outputs": [],
    "source": []
