--- a/peft/whisper_eval.ipynb
+++ b/peft/whisper_eval.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1b5a62f2-1079-4f06-8afc-9135db361d4d",
    "metadata": {},
    "outputs": [],
@@ -30,15 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6c638814-d20b-4af9-b9c4-09f76ba1b631",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -97,7 +100,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,14 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "24a1d9e4-e243-46e4-bff5-8d51ab302d21",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -265,7 +263,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,10 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cdb02d5f-07f5-4ef1-87cb-0c81925bf586",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(peft_config.base_model_name_or_path, language=language, task=task)\n",
     "processor = AutoProcessor.from_pretrained(peft_config.base_model_name_or_path, language=language, task=task)\n",
@@ -297,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9646f874-182c-4a6b-b000-b35f90fc893e",
    "metadata": {},
    "outputs": [],
@@ -314,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2a0f0d3f-71d5-4cae-8230-70b1fb4548d8",
    "metadata": {},
    "outputs": [],
@@ -328,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "be3d5a3c-d498-4250-a590-ccd51e9b03f0",
    "metadata": {},
    "outputs": [],
@@ -340,10 +347,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7c4e47ac-2001-47c0-a53a-9490c94bc784",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 320/320 [01:06<00:00,  4.82 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "tokenized_common_voice = small_common_voice.map(prepare_dataset)"
    ]
@@ -358,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f2aa0d9e-8ca7-47ed-8856-cebce1d93c65",
    "metadata": {},
    "outputs": [],
@@ -409,10 +424,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3e774b45-69a9-4f95-938d-e3284ff6060f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 100%|██████████| 4.49k/4.49k [00:00<00:00, 13.7MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import evaluate\n",
     "\n",
@@ -422,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6e5c0c9d-5ccd-4770-9cfc-78e51c956baa",
    "metadata": {},
    "outputs": [],
@@ -437,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "e1371372-b803-4cb0-96a2-110df3d52541",
    "metadata": {},
    "outputs": [
@@ -445,9 +468,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]/root/miniconda3/lib/python3.11/site-packages/bitsandbytes/autograd/_functions.py:322: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
+      "  0%|          | 0/20 [00:00<?, ?it/s]/root/miniconda3/envs/py311/lib/python3.11/site-packages/bitsandbytes/autograd/_functions.py:322: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
       "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
-      "100%|██████████| 20/20 [05:25<00:00, 16.26s/it]\n"
+      "100%|██████████| 20/20 [16:38<00:00, 49.94s/it]\n"
      ]
     }
    ],
@@ -496,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d2276bf1-1ab3-453c-9c7a-93486b829332",
    "metadata": {},
    "outputs": [
@@ -504,7 +527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wer=70.0%\n"
+      "wer=70.9375%\n"
      ]
     }
    ],
@@ -541,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
