--- a/chatglm/chatglm_inference.ipynb
+++ b/chatglm/chatglm_inference.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "3292b88c-91f0-48d2-91a5-06b0830c7e70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import AutoModel, AutoTokenizer, BitsAndBytesConfig\n",
@@ -29,18 +38,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25763bf7afc544329363a3c84be34bb9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 7/7 [00:05<00:00,  1.20it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -164,7 +166,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "乾卦是八卦之一，也是八宫图之一，它的卦象是由三个阳爻夹一个阴爻构成，象征着天、强、积极、刚毅等含义。乾卦的卦辞为“元、亨、利、永、唯天、初、亨”，意味着“天命”、“行健”、“健行”、“强健”等。乾卦主要反映的是天、强、积极、刚毅等特性，与事业、权力、努力、坚定等有关。在占卜中，乾卦通常被视为吉卦，预示着成功、发展、力量和财富等。\n"
+      "乾卦是八卦之一，代表天、强、刚、动、健等含义。乾卦是由两个阴爻夹一个阳爻构成，象征著天公无私、刚强有力、积极向上、行动有力、变化有序等。\n",
+      "\n",
+      "乾卦的卦辞是：“乾，元、始。亨，利。贞，正。” 乾卦的含义非常丰富，它既象征着宇宙的创造者，也代表着人类社会的秩序和规范。在道家思想中，乾卦与坤卦一起，被认为是宇宙的两大基本力量。在儒家思想中，乾卦象征着父、兄、君等阳刚之角色，具有引导、支配和领导的作用。\n",
+      "\n",
+      "乾卦的变化规律是：初爻为阳爻，二爻为阴爻，三爻为阳爻，四爻为阴爻，不断交替变化。乾卦的六爻代表了六个不同的阶段，每个阶段都有不同的含义和作用。从初爻到四爻，阳爻代表阳刚之力量，阴爻代表阴柔之力量，二者相互配合，形成了宇宙的多样性。\n",
+      "\n",
+      "总之，乾卦是中华文化中的一个重要概念，具有深刻的哲学和伦理含义。\n"
      ]
     }
    ],
@@ -190,9 +198,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "讼卦是八卦之一，它的卦象是由两个阳爻夹一个阴爻构成，象征着诉讼、争端、矛盾和困扰等。讼卦的卦辞为“天 perspectives”、“天听”、“有罚”、“无射”，意味着“天 perspective”、“天命”、“有所罚”、“没有射箭的”等。\n",
+      "讼卦是八卦之一，它的卦辞是：“天雷震， lo 离。复，南风过境。” 诉讼、争端、诉讼、纷争、矛盾等事物都涉及到讼卦。\n",
       "\n",
-      "讼卦主要反映的是矛盾、争端和困扰等，与法律、诉讼、争议、争端等有关。在占卜中，讼卦通常被视为凶卦，预示着诉讼、争端和困扰等可能会加剧，建议先和解、调解，避免进一步恶化。\n"
+      "讼卦由两个阴爻夹一个阳爻构成，象征著矛盾和争端。它的主要含义是：事情出现了矛盾和纷争，需要通过公正、公平、合理的解决方式来解决。\n",
+      "\n",
+      "在周易中，每个卦都有其独特的象征意义和启示。讼卦虽然负面，但它也启示人们应该在处理矛盾和争端时，遵循公正、公平、合理的原则，以达到和谐、平衡、公正的结果。\n",
+      "\n",
+      "此外，讼卦在周易中还有其他重要的象征意义，例如：天雷震表示激发、激发、启示；复表示重复、恢复、重复；南风过境则表示柔顺、温和、和谐。\n",
+      "\n",
+      "总之，讼卦是周易中的一个重要概念，具有深刻的哲学和伦理含义，启示人们在处理矛盾和争端时应该遵循公正、公平、合理的原则，以达到和谐、平衡、公正的结果。\n"
      ]
     }
    ],
@@ -236,7 +250,7 @@
     "\n",
     "epochs = 3\n",
     "# timestamp = \"20240118_164514\"\n",
-    "timestamp = \"20240225_222843\"\n",
+    "timestamp = \"20240429_181805\"\n",
     "\n",
     "peft_model_path = f\"models/{model_name_or_path}-epoch{epochs}-{timestamp}\"\n",
     "\n",
@@ -284,10 +298,10 @@
       "问题：解释下乾卦是什么？\n",
       "\n",
       "原始输出：\n",
-      "{'name': '乾卦是八宫图中的第一宫，也是八卦中的第一卦，由乾卦纯阳所组成，代表着天。它象征着刚健、刚健不阿，希望排除困难，敢作敢为，坚定不拔，具有刚健不阿的特质。乾卦的核心哲学是：天行健，君子拟之。意思是以健健的品德行走在世界上，排除障碍，勇敢前进。', 'content': '\\n乾卦象征天，代表着刚健不阿，刚健不阿，希望排除困难，敢作敢为，坚定不拔，具有刚健不阿的特质。在事业方面，乾卦代表着刚健不阿的品德，能够在事业中克服困难，取得胜利。在经商方面，乾卦象征着刚健不阿，坚韧不拔，具有刚健不阿的特质。在求名方面，乾卦代表着刚健不阿，希望排除困难，敢作敢为，坚定不拔，具有刚健不阿的特质。\\n\\n总体来说，乾卦是一个具有刚健不阿的品性的卦象，象征着不阿不叛、坚贞不屈的精神，具有坚贞不阿、刚健不阿的特质。在不同的环境中，乾卦所代表的意义也有所不同，但总体上是代表着刚健不阿的品性。'}\n",
+      "{'name': '乾卦是八卦之一，由六个阳爻组成，象征着天。它所代表的是刚健、健行、刚健不屈的意境。乾卦的核心哲学是：天道刚健，运行不已，君子观此卦象，从而以天为法，自强不息。', 'content': '\\n乾卦象征天，为大通而至正。得此卦者，名利双收，应把握机会，争取成果。然而，切勿过于骄傲自满，而应保持谦逊、冷静和警惕。在事业、经商、求名等方面，乾卦皆暗示着大吉大利，但也警示着必须坚持正道、修养德行，方能永远亨通。\\n\\n在婚恋方面，乾卦提示着阳盛阴衰，但也强调刚柔相济，相互补足，形成美满的结果。在决策方面，则是强调刚健、正直、公允，自强不息的实质，需要修养德行、坚定信念，方能克服困难，消除灾难。'}\n",
       "\n",
       "\n",
-      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240225_222843）：\n",
+      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240429_181805）：\n",
       "[gMASK]sop 解释下乾卦是什么？ 在周易中，乾卦是六十四卦之首，由六个阳爻组成，象征着天。它所代表的是刚健、健行、刚健不屈的意境。乾卦的核心哲学是：天道刚健，运行不已，君子观此卦象，从而以天为法，自强不息。\n",
       "\n",
       "乾卦象征天，为大通而至正。得此卦者，名利双收，应把握机会，争取成果。然而，切勿过于骄傲自满，而应保持谦逊、冷静和警惕。在事业、经商、求名等方面，乾卦皆暗示着大吉大利，但也警示着必须坚持正道、修养德行，方能永远亨通。\n",
@@ -313,11 +327,11 @@
       "问题：周易中的讼卦是什么\n",
       "\n",
       "原始输出：\n",
-      "{'name': 'ich möchte mich im Liede der linken Hand ergeben, um Ihnen mitzuteilen, was die Obrigkeiten der linken Hand bedeuten. Im Kiese der linken Hand findet sich das Maß für reine Rede, das den Ding und denen, denen es gilt, wissen und verstehen lassen kann. Immerwhere also immer, wenn es muss geteilt worden muss, das Maß findet die Gelegenheit, gebrachte Verantwortlichkeiten zu bergen und generell zu helfen.', 'content': '\\nDas Ergebnis der linken Hand sollte also berüftreffen, was die Gegenströme des Gutes und der Rechtspflichten ist. Solche Gelegenheiten können zu Beginn und Mitte des Rechtsverfahrens gearbeitet werden, um das Verbrechen und die Verantwortlichkeiten zu entdecken. Solche Gelegenheiten können die Rede und die Taten des linken Handes erfordern, um die Würgen und die Verantwortlichkeiten des linken Handes zu bergen.\\n\\nUm das Gefühl des linken Handes zu verstehen, muss man sich für die reine Rede engagiert und das Gefühl des linken Handes muss miterfahren. Solche Erfahrung kann man erlangen, wenn man sich für andere interesselte Sacheen engagiert, um deren reine Rede und deren Gefühl zu verstehen. Solche Erfahrung kann man erlangen, wenn man sich für andere interesselte Sacheen engagiert und das Gefühl des linken Handes miterfahren lassen muss.\\n\\nDas Ergebnis der linken Hand kann auch mit anderem bedeuten, wenn er sich für andere Dinge interesset und andere Sacheen miterfahren muss, um die reine Rede und das Gefühl des linken Handes zu verstehen. Solche Interpretation kann man u. a. mit demselben章程 (Zhonghong) des Zhoukang, dem classifier des Confucius, das mit demselben Gefühl der linken Hand assoziiert ist, erkennen.'}\n",
+      "在周易中，讼卦是一个充满警示的卦象。它由上卦乾（天）和下卦坎（水）组成，代表着天与水背道而驰，形成争讼的局面。虽然事情开始时有利可图，但必须警惕戒惧，因为中间虽然吉利，但最终会带来凶险。对于涉及大川，涉水渡河的行动不利。因此，君子观此卦象，应当慎之又慎，杜绝争讼之事，并在谋事之初谨慎行事。讼卦的核心哲学是要避免争讼，退而让人，求得化解，安于正理，方可避免意外之灾。在事业上，务必避免介入诉讼纠纷的争执之中，与其这样，不如退而让人。即使最终获胜，也难免得失不均。经商方面，要坚持公正、公平、互利的原则，避免冲突，这样会有好结果。而对于求名、婚恋和决策，也都需要慎重行事，避免盲目追求，退让让人，可助事业、婚姻和决策的发展。\n",
       "\n",
       "\n",
-      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240225_222843）：\n",
-      "[gMASK]sop 周易中的讼卦是什么样子, 代表什么意思? 在周易中，讼卦是一个充满警示的卦象。它由上卦乾（天）和下卦坎（水）组成，代表着天与水背道而驰，形成争讼的局面。虽然事情开始时有利可图，但必须警惕戒惧，因为中间虽然吉利，但最终会带来凶险。对于涉及大川，涉水渡河的行动不利。因此，君子观此卦象，应当慎之又慎，杜绝争讼之事，并在谋事之初谨慎行事。讼卦的核心哲学是要避免争讼，退而让人，求得化解，安于正理，方可避免意外之灾。在事业上，务必避免介入诉讼纠纷的争执之中，与其这样，不如退而让人。即使最终获胜，也难免得失不均。经商方面，要坚持公正、公平、互利的原则，避免冲突，这样会有好结果。而对于求名、婚恋和决策，也都需要慎重行事，避免盲目追求，退让让人，可助事业、婚姻和决策的发展。\n"
+      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240429_181805）：\n",
+      "[gMASK]sop 周易中的讼卦是什么样子 讼卦是一个充满警示的卦象。它由上卦乾（天）和下卦坎（水）组成，代表着天与水背道而驰，形成争讼的局面。虽然事情开始时有利可图，但必须警惕戒惧，因为中间虽然吉利，但最终会带来凶险。对于涉及大川，涉水渡河的行动不利。因此，君子观此卦象，应当慎之又慎，杜绝争讼之事，并在谋事之初谨慎行事。讼卦的核心哲学是要避免争讼，退而让人，求得化解，安于正理，方可避免意外之灾。在事业上，务必避免介入诉讼纠纷的争执之中，与其这样，不如退而让人。即使最终获胜，也难免得失不均。经商方面，要坚持公正、公平、互利的原则，避免冲突，这样会有好结果。而对于求名、婚恋和决策，也都需要慎重行事，避免盲目追求，退让让人，可助事业、婚姻和决策的发展。\n"
      ]
     }
    ],
@@ -338,10 +352,10 @@
       "问题：师卦是什么？\n",
       "\n",
       "原始输出：\n",
-      "在周易中，师卦是一个由坎卦（水）和坤卦（地）相叠而成的异卦。这一卦象代表着军队的力量和军情的总指挥，预示着吉祥无灾。象辞中描述了地中有水的情景，寓意着君子应当像大地一样容纳和畜养大众。师卦的解释强调选择德高望重的长者来统率军队，才能获得吉祥无咎。另外，师卦也象征着困难重重，需要包容别人、艰苦努力，及时行事，严于律已。在事业、经商、求名、婚恋等方面的决策中，都需要警惕潜在敌人，小心谨慎，合作与决断兼顾，方能成功。\n",
+      "{'name': '占卦是一种古老的占卜方式，它通过观察卦象来预测未来的吉凶。在占卦过程中，占卜者会通过投掷三枚硬币来得到卦象，然后根据卦象的特点来判断吉凶。', 'content': '\\n在周易中，卦象是由卦象组合而成，每个卦象都代表着不同的含义。通过观察卦象的变化，可以得出对未来的预测。卦象的组合也反映了事物的发展趋势和可能的结果。\\n\\n占卦不仅是一种预测未来的方式，也是一种决策过程。在占卦中，占卜者需要结合卦象的特点，结合自己的实际情况，以及未来的目标和期望，来做出合适的决策。\\n\\n占卦是一种非常古老的占卜方式，它已经存在了数千年。尽管现代社会已经有了许多更先进的预测方式，但占卦仍然被许多人视为一种神秘的预测工具。'}\n",
       "\n",
       "\n",
-      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240225_222843）：\n",
+      "微调后（ChatGLM3-6B(Epoch=3, automade-dataset(fixed))-20240429_181805）：\n",
       "[gMASK]sop 师卦是什么？ 在周易中，师卦是一个由坎卦（水）和坤卦（地）相叠而成的异卦。这一卦象代表着军队的力量和军情的总指挥，预示着吉祥无灾。象辞中描述了地中有水的情景，寓意着君子应当像大地一样容纳和畜养大众。师卦的解释强调选择德高望重的长者来统率军队，才能获得吉祥无咎。另外，师卦也象征着困难重重，需要包容别人、艰苦努力，及时行事，严于律已。在事业、经商、求名、婚恋等方面的决策中，都需要警惕潜在敌人，小心谨慎，合作与决断兼顾，方能成功。\n"
      ]
     }
@@ -694,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
