--- a/peft/peft_qlora_chatglm.ipynb
+++ b/peft/peft_qlora_chatglm.ipynb
@@ -75,7 +75,16 @@
    "execution_count": 2,
    "id": "f7517070-eae3-45e1-b6a2-f49f332650ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
@@ -162,18 +171,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>类型#裙*颜色#蓝色*风格#青春*风格#清新*风格#性感*裙领型#一字领</td>\n",
-       "      <td>露出性感的锁骨，展现柔美女人味道，这款裙摆做的很不错，它拥有一字领的设计，呈现出优雅大方的气质。细碎的花朵图案，满满的铺陈在蓝色的基调上，让清新的蓝色，焕发出青春的活力，充满勃勃生机。半透明质感的肩部和下摆，若影若现，飘然出尘，演绎仙女般的自然灵动。</td>\n",
+       "      <td>类型#上衣*衣样式#外套*衣领型#娃娃领*衣门襟#拉链*衣款式#拉链</td>\n",
+       "      <td>这是一款充满仙女气质的外套，它采用的是简单大方的直筒版型，不会过于高调奢华，体现了自然艺术风格。细致讲究的娃娃领设计，瞬间减龄，不会让人看起来过于成熟适合多个年龄段的女性。门襟的拉链设计，顺滑耐拉，长款的设计，包容性更好，可以遮住多余的肉肉。</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>类型#裙*图案#印花*裙下摆#荷叶边*裙衣门襟#系带</td>\n",
-       "      <td>不要对自己的身材不自信，这一款裙子就是要让每一个女生都能拥有自己的风采，骨子里散发出来的好气质。领部系带，给人一种温婉雅致的舒适感。别致印花点缀，简洁明了更精致耐看。荷叶边裙摆，大气耐看显气质彰显女神范。</td>\n",
+       "      <td>类型#裙*风格#复古*风格#性感*图案#格子*图案#复古*裙长#短裙</td>\n",
+       "      <td>演绎复古高阶质感的时尚短裤，是春夏季节的衣柜必备品。经典的格纹元素，&lt;UNK&gt;时尚界百年，上身就能带来很好的气质感。利落的剪裁，巧妙地采用一片式设计，看似短裙，实则短裤，性感迷人的同时兼备安全感！</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>类型#裙*颜色#纯色*图案#纯色*裙长#连衣裙*裙领型#立领*裙款式#拼接</td>\n",
-       "      <td>这款连衣裙，采用的是纯色的搭配，纯黑配色满满的深沉气质，就如同高级灰配色一样百搭。而表面的双材质拼接设计，丰富层次，却并不显花哨。精致的立领设计无形中彰显了优雅大气的感觉。随性搭配，尽显潮女气质。</td>\n",
+       "      <td>类型#裙*版型#显瘦*颜色#墨绿色*风格#清新*风格#性感*裙长#连衣裙*裙领型#一字领*裙款式#收腰</td>\n",
+       "      <td>炎炎夏日少不了一条清爽的连衣裙，墨绿色为基调风格清新接近大自然，还能提亮肤色显肤白。简洁利落的一字领型露出精美锁骨迷人吸睛，性感不失优雅大气，收腰设计勾勒腰线令版型不显呆板更灵活生动，a子裙摆遮肉显瘦适合各种身形矮个子也能穿。</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -307,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f78a19ed-6862-42fa-896d-2c297b94ce41",
    "metadata": {},
    "outputs": [],
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6fe0b50d-56cf-469f-9b35-0eb573cd1b04",
    "metadata": {},
    "outputs": [
@@ -340,8 +349,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[64790, 64792, 30910, 33467, 31010, 56778, 30998, 33692, 31010, 35798, 30998, 32799, 31010, 37785, 30998, 56778, 54888, 31010, 56069, 54762, 56778, 30998, 56778, 54888, 31010, 30913, 54952, 30998, 56778, 56278, 54888, 31010, 54589, 56278, 30998, 56778, 40877, 31010, 54535, 33257, 30910, 54999, 55583, 54617, 43518, 34319, 54530, 56778, 56532, 31123, 55881, 55640, 37411, 54530, 35798, 46839, 31123, 32985, 31841, 51827, 37785, 55810, 32789, 34574, 32799, 31155, 54589, 56278, 30913, 54952, 56778, 55090, 54888, 31123, 55097, 54589, 34319, 32938, 33253, 33355, 56383, 58190, 54557, 55108, 54625, 47745, 56158, 54888, 31155, 54535, 33257, 56069, 54762, 56778, 31002, 5234, 30984, 30994, 55353, 51827, ...]</td>\n",
-       "      <td>[-100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, 30910, 54999, 55583, 54617, 43518, 34319, 54530, 56778, 56532, 31123, 55881, 55640, 37411, 54530, 35798, 46839, 31123, 32985, 31841, 51827, 37785, 55810, 32789, 34574, 32799, 31155, 54589, 56278, 30913, 54952, 56778, 55090, 54888, 31123, 55097, 54589, 34319, 32938, 33253, 33355, 56383, 58190, 54557, 55108, 54625, 47745, 56158, 54888, 31155, 54535, 33257, 56069, 54762, 56778, 31002, 5234, 30984, 30994, 55353, 51827, ...]</td>\n",
+       "      <td>[64790, 64792, 30910, 33467, 31010, 49534, 30998, 32799, 31010, 38638, 30998, 32799, 31010, 44785, 30998, 37505, 31010, 56069, 54785, 30998, 37505, 31010, 44785, 30998, 37505, 31010, 45859, 30998, 55500, 46025, 31010, 57439, 906, 5234, 30984, 30994, 31952, 31002, 5234, 30984, 30994, 45859, 55233, 55500, 57046, 57439, 31123, 32132, 33076, 38638, 31893, 31002, 5234, 30984, 30994, 36539, 54575, 55258, 31002, 5234, 30984, 30994, 31952, 31123, 56069, 54785, 31735, 54643, 55519, 55399, 33692, 31768, 54619, 38396, 31002, 5234, 30984, 30994, 40475, 54669, 45110, 31123, 44785, 54619, 38638, 32799, 32627, 32651, 31123, 33113, 33888, 45886, 54739, 35081, 34317, 31201, 33056, 54530, 31002, 5234, ...]</td>\n",
+       "      <td>[-100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, 906, 5234, 30984, 30994, 31952, 31002, 5234, 30984, 30994, 45859, 55233, 55500, 57046, 57439, 31123, 32132, 33076, 38638, 31893, 31002, 5234, 30984, 30994, 36539, 54575, 55258, 31002, 5234, 30984, 30994, 31952, 31123, 56069, 54785, 31735, 54643, 55519, 55399, 33692, 31768, 54619, 38396, 31002, 5234, 30984, 30994, 40475, 54669, 45110, 31123, 44785, 54619, 38638, 32799, 32627, 32651, 31123, 33113, 33888, 45886, 54739, 35081, 34317, 31201, 33056, 54530, 31002, 5234, ...]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "75293898-f010-4cae-bf01-d58afc9dc214",
    "metadata": {},
    "outputs": [],
@@ -386,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "99f17038-ec1a-4935-ae39-afca620c461d",
    "metadata": {},
    "outputs": [],
@@ -412,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "631a70f9-a75e-42d6-ad8b-5fd635db8d84",
    "metadata": {},
    "outputs": [],
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "790fb86b-7662-4c49-8e3b-3db239c60838",
    "metadata": {},
    "outputs": [],
@@ -520,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a1480790-6035-4212-bc64-4292f6a908ca",
    "metadata": {},
    "outputs": [],
@@ -550,23 +559,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c6ab5f48-a7ce-492a-bb8b-4c0c3ff04bd0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a24fa9650544ddd9019b760ff34e41a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 7/7 [00:05<00:00,  1.18it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -581,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "aaabfe10-d762-498a-87f1-1506d2ea2fe9",
    "metadata": {},
    "outputs": [
@@ -615,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "5f59a712-4829-4929-b795-31ffdfab1761",
    "metadata": {},
    "outputs": [
@@ -663,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "b4dd1cb6-c1b4-430b-b031-c842ddc683a6",
    "metadata": {},
    "outputs": [],
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "517018b1-dff0-4caf-a1ff-21933f95e4b5",
    "metadata": {},
    "outputs": [
@@ -685,7 +687,7 @@
        "['query_key_value']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ab44290b-7bf2-44f0-ac36-ef0d41527224",
    "metadata": {},
    "outputs": [],
@@ -722,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "bee2f80a-ccac-4c85-965e-ce5e5be528e8",
    "metadata": {},
    "outputs": [],
@@ -732,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "9cf0acae-9e20-4d30-9999-53c3079cc42c",
    "metadata": {},
    "outputs": [
@@ -840,7 +842,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detected kernel version 4.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
+      "Detected kernel version 5.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
      ]
     }
    ],
@@ -863,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "6164c2c8-47b4-4472-a192-952d8e425554",
    "metadata": {},
    "outputs": [],
@@ -888,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "9655c7a7-75fd-4f0a-b190-e97a533c9bae",
    "metadata": {},
    "outputs": [
@@ -896,7 +898,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detected kernel version 4.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
+      "Detected kernel version 5.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
      ]
     }
    ],
@@ -919,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "07413af1-dff0-466a-adaa-00a80f327350",
    "metadata": {},
    "outputs": [
@@ -928,7 +930,7 @@
      "output_type": "stream",
      "text": [
       "`use_cache=True` is incompatible with gradient checkpointing. Setting `use_cache=False`...\n",
-      "/root/miniconda3/lib/python3.11/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/torch/utils/checkpoint.py:460: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -939,7 +941,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='100' max='100' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [100/100 46:45, Epoch 0/1]\n",
+       "      [100/100 1:30:30, Epoch 0/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -951,43 +953,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>4.694100</td>\n",
+       "      <td>4.691300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
-       "      <td>3.805300</td>\n",
+       "      <td>3.801400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>30</td>\n",
-       "      <td>3.590100</td>\n",
+       "      <td>3.585600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>40</td>\n",
-       "      <td>3.502200</td>\n",
+       "      <td>3.500100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>50</td>\n",
-       "      <td>3.440100</td>\n",
+       "      <td>3.436900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>60</td>\n",
-       "      <td>3.411000</td>\n",
+       "      <td>3.410200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>70</td>\n",
-       "      <td>3.399500</td>\n",
+       "      <td>3.397500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>80</td>\n",
-       "      <td>3.375400</td>\n",
+       "      <td>3.372300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>90</td>\n",
-       "      <td>3.359900</td>\n",
+       "      <td>3.358900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>3.328900</td>\n",
+       "      <td>3.324100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -1003,28 +1005,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Checkpoint destination directory models/demo/THUDM/chatglm3-6b/checkpoint-20 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n",
-      "/root/miniconda3/lib/python3.11/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/torch/utils/checkpoint.py:460: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
       "  warnings.warn(\n",
-      "Checkpoint destination directory models/demo/THUDM/chatglm3-6b/checkpoint-40 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n",
-      "/root/miniconda3/lib/python3.11/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/torch/utils/checkpoint.py:460: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
       "  warnings.warn(\n",
-      "Checkpoint destination directory models/demo/THUDM/chatglm3-6b/checkpoint-60 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n",
-      "/root/miniconda3/lib/python3.11/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/torch/utils/checkpoint.py:460: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
       "  warnings.warn(\n",
-      "Checkpoint destination directory models/demo/THUDM/chatglm3-6b/checkpoint-80 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n",
-      "/root/miniconda3/lib/python3.11/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
-      "  warnings.warn(\n",
-      "Checkpoint destination directory models/demo/THUDM/chatglm3-6b/checkpoint-100 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n"
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/torch/utils/checkpoint.py:460: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=100, training_loss=3.5906502532958986, metrics={'train_runtime': 2832.2774, 'train_samples_per_second': 2.26, 'train_steps_per_second': 0.035, 'total_flos': 3.840600180523008e+16, 'train_loss': 3.5906502532958986, 'epoch': 0.06})"
+       "TrainOutput(global_step=100, training_loss=3.5878423690795898, metrics={'train_runtime': 5483.5378, 'train_samples_per_second': 1.167, 'train_steps_per_second': 0.018, 'total_flos': 3.840600180523008e+16, 'train_loss': 3.5878423690795898, 'epoch': 0.06})"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "320cd8a8-3690-4a2b-b725-f4c1316646ac",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
