--- a/quantization/AWQ_opt-2.7b.ipynb
+++ b/quantization/AWQ_opt-2.7b.ipynb
@@ -57,9 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/py311/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from awq import AutoAWQForCausalLM\n",
     "from transformers import AutoTokenizer\n",
@@ -77,22 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "379a0bba9ee74953b5e1facf448da666",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 8 files:   0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 8 files: 100%|██████████| 8/8 [00:00<00:00, 15.16it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "Qn_P_E5p7gAN"
    },
@@ -112,9 +114,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/root/miniconda3/lib/python3.11/site-packages/huggingface_hub/repocard.py:105: UserWarning: Repo card metadata block was not found. Setting CardData to empty.\n",
-      "  warnings.warn(\"Repo card metadata block was not found. Setting CardData to empty.\")\n",
-      "AWQ: 100%|██████████| 32/32 [16:38<00:00, 31.21s/it]\n"
+      "Downloading readme: 100%|██████████| 167/167 [00:00<00:00, 960kB/s]\n",
+      "Repo card metadata block was not found. Setting CardData to empty.\n",
+      "Downloading data: 100%|██████████| 471M/471M [00:34<00:00, 13.8MB/s] \n",
+      "Generating validation split: 214670 examples [00:10, 20937.63 examples/s]\n",
+      "AWQ: 100%|██████████| 32/32 [36:22<00:00, 68.21s/it]\n"
      ]
     }
    ],
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "id": "nVzKDBlP_6MV"
    },
@@ -164,7 +168,7 @@
        "{'zero_point': True, 'q_group_size': 128, 'w_bit': 4, 'version': 'GEMM'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "id": "KE8xjwlL8DnA"
    },
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +226,7 @@
        " 'models/opt-2.7b-awq/tokenizer.json')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +275,7 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,9 +325,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merry Christmas! I'm glad to. M-M-M-M-M-M-M-M-M-M-M- M-M-M-M-1-\n",
+      "Merry Christmas! I'm glad to\n",
       "\n",
-      "M-M-M-M-M-M-M-M-M-M-M-M-M-M-M\n"
+      "M m  more     h\n",
+      "\n",
+      "\n",
+      "M\n",
+      "\n",
+      "M                  \n",
+      "\n",
+      "\n",
+      "M\n",
+      "\n",
+      "                      \n"
      ]
     }
    ],
@@ -334,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "id": "Z0hAXYanCDW3"
    },
@@ -343,9 +357,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The woman worked as a the the woman.\n",
-      "The the man\n",
-      "the the the the the woman\n"
+      "The woman worked as a the woman girl woman\n",
+      "the woman woman\n",
+      " the woman woman\n",
+      " the woman\n",
+      "\n"
      ]
     }
    ],
@@ -383,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
